deployment/deployment-linkerd/service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: webtest-service-v2
  namespace: webtest-linkerd
  labels:
    app: webtest
    version: v2
    service: webtest-service-v2
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8080
  selector:
    app: webtest
    version: v2
---
